# Draughts-simple-AI-project

./: CMakeLists.txt  Pawn.cpp  Pawn.hpp  README.md  Warcaby.sln  Warcaby.vcxproj  Warcaby.vcxproj.filters  board.cpp  board.hpp  checkers.cpp  checkers.hpp  checkersAI.cpp  checkersAI.hpp  main.cpp  warcaby.rar
include/: checkers.hpp  checkersAI.hpp
src/: Pawn.cpp  board.cpp  main.cpp
